--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ show_contact_card: true
 # contact_title: The will be displayed as the title in the Contact section
 contact_title: Contato
 # contact_description: This will be displayed under the title.
-contact_description: <a class="highlight-link" href="https://github.com/Ana-CAS-Machado" target="_blank" rel="noreferrer"> Github </a>.<a class="highlight-link" href="https://www.linkedin.com/in/ana-carolina-alves-da-silva-machado-a17244112/" target="_blank" rel="noreferrer">Linkedin</a>.<a class="highlight-link" href="https://twitter.com/Anna_Auditore" target="_blank" rel="noreferrer">Twitter</a>. <a class="highlight-link" href="https://instagram.com/aannaananna?igshid=NGExMmI2YTkyZg==" target="_blank" rel="noreferrer">Instagram</a>. 
+contact_description: <a class="highlight-link" href="https://github.com/Ana-CAS-Machado" target="_blank" rel="noreferrer"> Github </a>.<a class="highlight-link" href="https://www.linkedin.com/in/ana-carolina-alves-da-silva-machado-a17244112/" target="_blank" rel="noreferrer">Linkedin</a>.<a class="highlight-link" href="https://twitter.com/Anna_Auditore" target="_blank" rel="noreferrer">Twitter</a>. <a class="highlight-link" href="https://www.instagram.com/aannaanaannaa?igsh=djMzdG9hMWdsbjM5 " target="_blank" rel="noreferrer">Instagram</a>. 
 
 # GITHUB-METADATA
 # Set this to your forked repository
